prototype/manifests/demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-test
  labels:
    istio-injection: enabled      # Istio auto-injects sidecar proxies into every pod
